--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
